--- a/main.css
+++ b/main.css
@@ -3,14 +3,17 @@ h1 {
   font-family: Arial
 }
 
+
 h2 {
   font-size: 25px;
   font-family: Arial
 }
 
+
 h3 {
   font-family: Arial
 }
+
 
 p {
   font-size: 14px;
@@ -20,4 +23,15 @@ p {
 div {
   background-color: darkcyan;
   text-align: right;
+}
+th,
+td {
+  padding: 8px;
+  text-align: left;
+  border-bottom: 1px solid #ddd;
+  font-family: Arial
+}
+
+tr:nth-child(odd) {
+  background-color: #f2f2f2;
 }
